# obs-studio

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  dependencies.json
UI/cmake/: ui-qt.cmake
cmake/Modules/: CompilerConfig.cmake  ObsDefaults_Windows.cmake
cmake/common/: bootstrap.cmake  buildnumber.cmake  compiler_common.cmake  dependencies.cmake  osconfig.cmake  versionconfig.cmake
cmake/finders/: FindLibAJANTV2.cmake  FindLibWebrtc.cmake
cmake/macos/: compilerconfig.cmake
cmake/windows/: buildspec.cmake
libobs/: obs.c
libobs/audio-monitoring/osx/: coreaudio-enum-devices.c
plugins/mac-avcapture/: av-capture.mm
plugins/mac-capture/: audio-device-enum.c  mac-audio.c  mac-sck-audio-capture.m  mac-sck-common.m  mac-sck-video-capture.m
plugins/mac-virtualcam/src/dal-plugin/: OBSDALObjectStore.mm  OBSDALPlugInInterface.mm
plugins/obs-webrtc/: CMakeLists.txt
plugins/obs-webrtc/output/: CMakeLists.txt  obs_webrtc.cc  video_source.cc  video_source.hpp  webrtc_output.cc  webrtc_output.hpp  webrtc_service.cc  webrtc_service.hpp
